--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,11 +1,17 @@
 @use 'hero';
+@use 'event';
+@use 'variables';
+@use 'components/infos_bar';
+@use 'components/buttons';
+
 
 * {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
     font-family: Roboto, sans-serif;
-    color: #fff;
+    color: variables.$textColor;
+    list-style: none;
 }
 
 .container {
